# wwise-godot-integration

./: .gitattributes  .gitignore  .gitmodules  .tool-versions  .travis.yml  CLAUDE.md  LICENSE  README.md  project.godot
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/actions/setup/: action.yml
.github/workflows/: android_builds.yml  backport.yml  build_all.yml  github-releases-to-discord.yml  integration_app_osx.yml  integration_app_windows.yml  integration_package.yml  ios_builds.yml  linux_builds.yml  osx_builds.yml  windows_builds.yml
addons/Wwise/: plugin.cfg  wwise.gd
addons/Wwise/editor/: ak_build_export.gd  ak_editor_plugin.gd  ak_event_gizmo.gd  editor_plugin.gd
addons/Wwise/metadata/: Options.Godot.json
addons/Wwise/native/: .gitignore  Android.mk  SConstruct  build_profile_editor.json  build_profile_runtime.json  wwise.gdextension  wwise.gdextension.uid
addons/Wwise/native/android/plugin/: CMakeLists.txt  build.gradle.kts
addons/Wwise/native/android/plugin/src/main/: AndroidManifest.xml
addons/Wwise/native/android/plugin/src/main/java/org/godotengine/plugin/android/gdextension/wwise/: GDExtensionAndroidPlugin.kt
addons/Wwise/runtime/: wwise_runtime_manager.gd  wwise_runtime_manager.gd.uid
addons/Wwise/tests/: ak_test.gd  ak_test_framework.gd  test_wwise.gd  tests.tscn
addons/Wwise/tools/: wwise_ids.template
docs/: local-build-setup.md  web-export-guide.md  web-export-implementation-plan.md
integration-app/: .gitignore  README.md  package-lock.json  package.json  vue.config.js
integration-app/public/: override.cfg
integration-app/src/: App.vue  background.js  main.js
integration-app/src/components/: Header.vue  Installation.vue
integration-app/src/router/: index.js
integration-app/src/store/: index.js
integration-app/src/views/: Home.vue
tests/: setup_Windows.bat
tests/GodotProject/: project.godot
tests/GodotProject/addons/: Wwise
tests/GodotProject/scenes/: main.tscn
tests/GodotProject/scripts/: switch.gd  switch.gd.uid  switch_volume.gd  switch_volume.gd.uid
tests/GodotProject/test/: test_web_export.gd  test_web_export.gd.uid  test_wwise.gd  test_wwise.gd.uid
tests/WwiseProject/: GenerateProjectWavFiles.py  GodotTests.wproj  IntegrationTest2025.1.3.wproj
tests/WwiseProject/Actor-Mixer Hierarchy/: Default Work Unit.wwu  Shared Assets.wwu  Switches Gyms.wwu
tests/WwiseProject/Attenuations/: Default Work Unit.wwu  Factory Attenuations.wwu
tests/WwiseProject/Audio Devices/: Default Work Unit.wwu
tests/WwiseProject/Busses/: Default Work Unit.wwu
tests/WwiseProject/Containers/: Default Work Unit.wwu  Factory Soundseed Air Objects.wwu  Factory Synth One.wwu  Shared Assets.wwu  Switches Gyms.wwu
tests/WwiseProject/Control Surface Sessions/: Default Work Unit.wwu
tests/WwiseProject/Conversion Settings/: Default Work Unit.wwu  Factory Conversion Settings.wwu
tests/WwiseProject/Devices/: Default Work Unit.wwu
tests/WwiseProject/Dynamic Dialogue/: Default Work Unit.wwu
tests/WwiseProject/Effects/: Default Work Unit.wwu  Factory Auro Headphone.wwu  Factory Effects.wwu  Factory Mastering Suite.wwu  Factory McDSP Effects.wwu  Factory Reflect Physically-Based.wwu  Factory Reflect.wwu  Factory iZotope Box Modeler.wwu  Factory iZotope Delay.wwu  Factory iZotope Dynamics.wwu  Factory iZotope Filters.wwu  Factory iZotope Hybrid Reverb Effects.wwu  Factory iZotope Multiband Distortion.wwu  Factory iZotope Singleband Distortion.wwu
tests/WwiseProject/Events/: Default Work Unit.wwu  Switches Gyms.wwu
tests/WwiseProject/ExternalSources/: 01.wav.import  02.wav.import  03.wav.import  04.wav.import  05.wav.import  06.wav.import  ExternalSources.wsources
tests/WwiseProject/Game Parameters/: Default Work Unit.wwu  Factory Soundseed Air Game Syncs.wwu
tests/WwiseProject/Interactive Music Hierarchy/: Default Work Unit.wwu
tests/WwiseProject/Master-Mixer Hierarchy/: Default Work Unit.wwu
tests/WwiseProject/Metadata/: Default Work Unit.wwu
tests/WwiseProject/Mixing Sessions/: Default Work Unit.wwu
tests/WwiseProject/Modulators/: Default Work Unit.wwu
tests/WwiseProject/Presets/: Default Work Unit.wwu  Factory Reflect Physically-Based.wwu  Factory Reflect.wwu  Factory Spatial Audio.wwu
tests/WwiseProject/Queries/: Default Work Unit.wwu  Factory Queries.wwu
tests/WwiseProject/Sidechain Mixes/: Default Work Unit.wwu
tests/WwiseProject/SoundBanks/: Default Work Unit.wwu
tests/WwiseProject/Soundcaster Sessions/: Default Work Unit.wwu
tests/WwiseProject/States/: Default Work Unit.wwu
tests/WwiseProject/Switches/: Default Work Unit.wwu  Switches Gyms.wwu
tests/WwiseProject/Triggers/: Default Work Unit.wwu
tests/WwiseProject/Virtual Acoustics/: Default Work Unit.wwu  Factory Acoustic Textures.wwu
tools/: serve.py
utils/: deployLibraries.cmd
waapiclient-gdnative/: .editorconfig  .gitignore  README.md  SConstruct
waapiclient-gdnative/gdnative-demo/: .gitignore  Main.tscn  project.godot
waapiclient-gdnative/gdnative-demo/.import/: icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex
waapiclient-gdnative/gdnative-demo/testing/: connect.gd  tests.tscn
waapiclient-gdnative/gdnative-demo/wwise/: waapi_picker.gd  waapi_picker.tscn  wwise_ids.gd
waapiclient-gdnative/src/: gdlibrary.cpp  waapiclient_gdnative.cpp  waapiclient_gdnative.h
waapiclient-gdnative/vs/vs2017/: waapiclient-gdnative.sln  waapiclient-gdnative.vcxproj.filters
wwise-gdnative/: .gitignore  Android.mk  README.md  SConstruct
wwise-gdnative/gdnative-demo/: .gitignore  .gutconfig.json  bank_init_test.gd  export_presets.cfg  icon_small_node.png.import  listener_test.gd  main.tscn  override.cfg  project.godot  testing_stuff.gd
wwise-gdnative/gdnative-demo-wwise-project/: .gitignore  gdnative-demo-wwise-project.ALEXZEN.wsettings  gdnative-demo-wwise-project.wproj
wwise-gdnative/jni/: Application.mk
wwise-gdnative/src/: gdlibrary.cpp  resonance_utils.h  wwise_gdnative.cpp  wwise_gdnative.h  wwise_godot_io.cpp  wwise_godot_io.h  wwise_utils.h
(+946 files in other folders)
